# trime-prebuilt

./: .gitmodules  README.md  build.yaml  prebuilt.rb
.github/workflows/: commit-ci.yml  release-ci.yml
support/marisa-trie/: CMakeLists.txt
